fixing some bugs on mobile screen's

--- a/css/style.css
+++ b/css/style.css
@@ -202,12 +202,18 @@ body {
 
 @media (min-width: 426px) and (max-width: 934px) {
   .bg {
-    height: 120vmax;
+    height: 150vmax;
   }
 }
 
 @media (max-width: 425px) {
   .bg {
     height: 150vmax;
+  }
+}
+
+@media (max-height: 700px) {
+  .bg {
+    height: 200vmax;
   }
 }
